# TrinityCore

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  revision.h.in.cmake  revision_data.h.in.cmake
cmake/: options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: FindPCHSupport.cmake  GroupSources.cmake
contrib/: check_updates.sh  travis.sh
dep/: CMakeLists.txt  PackageList.txt
dep/boost/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/cppformat/: CMakeLists.txt
dep/efsw/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/base/: auth_database.sql  characters_database.sql  hotfixes_database.sql
sql/base/dev/: hotfixes_database.sql
sql/updates/auth/: 2012_10_28_00_advanced_access_management.sql  2015_02_20_02_auth.sql  2015_03_11_02_auth.sql  aam.sql
sql/updates/characters/: 2015_02_20_02_characters.sql  2015_03_11_02_characters.sql
sql/updates/hotfixes/: 2015_02_20_00_hotfixes.sql  2015_02_20_02_hotfixes.sql  2015_03_11_02_hotfixes.sql
sql/updates/world/: 2012_09_09_01_world_phase_template.sql  2012_09_25_00_world_phase_definitions.sql  2012_22_09_02_world_phase_definitions.sql  2015_02_20_05_world.sql  2015_03_11_02_world.sql  2015_03_19_01_world.sql  2015_07_15_02_world.sql  hotswap_test.sql
sql/updates/world/3.3.5/: akama.sql
src/common/: CMakeLists.txt  Common.cpp  Common.h  Common.rc  Define.h  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.h  DynamicTree.h  VMapTools.h
src/common/Collision/Management/: IVMapManager.h  MMapFactory.h  MMapManager.h  VMapFactory.h  VMapManager2.h
src/common/Collision/Maps/: MapTree.h  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.h  ModelInstance.h  WorldModel.h
src/common/Configuration/: BuiltInConfig.h  Config.cpp  Config.h
src/common/Cryptography/: ARC4.h  BigNumber.h  HmacHash.cpp  HmacHash.h  OpenSSLCrypto.h  SHA1.h  SHA256.h
src/common/Cryptography/Authentication/: PacketCrypt.h  WorldPacketCrypt.h
src/common/Debugging/: Errors.h
src/common/Logging/: Appender.h  AppenderConsole.h  AppenderFile.h  Log.h  LogOperation.h  Logger.h
src/common/Utilities/: EventMap.h  EventProcessor.h  Random.h  TaskScheduler.h  Util.cpp  Util.h
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp
src/server/bnetserver/: CMakeLists.txt  Main.cpp  bnetserver.conf.dist
src/server/bnetserver/Packets/: PacketManager.cpp  PacketManager.h
src/server/bnetserver/Realms/: RealmList.cpp  RealmList.h
src/server/bnetserver/Server/: ComponentManager.cpp  ComponentManager.h  ModuleManager.cpp  ModuleManager.h  SessionManager.cpp  SessionManager.h
src/server/collision/: CMakeLists.txt
src/server/database/: CMakeLists.txt  Database.rc
src/server/database/Database/: AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.h  DatabaseWorkerPool.cpp  Field.h  MySQLConnection.h  MySQLThreading.h  PreparedStatement.h  QueryHolder.h  QueryResult.h  SQLOperation.h  Transaction.h
src/server/database/Logging/: AppenderDB.h
src/server/database/Updater/: DBUpdater.cpp  DBUpdater.h  UpdateFetcher.h
src/server/game/: CMakeLists.txt  Game.rc
src/server/game/AI/: CreatureAI.h  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h  BattlenetAccountMgr.h  RBAC.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.h  AuctionHouseBotBuyer.h  AuctionHouseBotSeller.h
src/server/game/Battlefield/: Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: Arena.h  ArenaScore.h  ArenaTeam.h  ArenaTeamMgr.h  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.h
src/server/game/Calendar/: CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.h
src/server/game/Combat/: HostileRefManager.h  ThreatManager.h  UnitEvents.h
src/server/ipc/: CMakeLists.txt  Commands.h  ZMQTask.h  ZmqContext.h  ZmqListener.h  ZmqMux.h  ZmqWorker.h
src/server/scripts/: CMakeLists.txt  DynamicScriptLoader.h.in.cmake  ScriptLoader.cpp.in.cmake  ScriptLoader.h.in.cmake  ScriptLoaderDefine.h.in.cmake  Scripts.rc
src/server/scripts/Commands/: cs_account.cpp  cs_achievement.cpp  cs_ban.cpp  cs_bf.cpp  cs_cast.cpp  cs_character.cpp  cs_cheat.cpp  cs_debug.cpp  cs_disable.cpp  cs_event.cpp  cs_gm.cpp  cs_go.cpp  cs_gobject.cpp  cs_guild.cpp  cs_honor.cpp  cs_instance.cpp  cs_learn.cpp  cs_list.cpp  cs_lookup.cpp  cs_message.cpp  cs_misc.cpp  cs_modify.cpp  cs_npc.cpp  cs_quest.cpp  cs_rbac.cpp  cs_reload.cpp  cs_reset.cpp  cs_server.cpp  cs_tele.cpp  cs_ticket.cpp  cs_titles.cpp  cs_wp.cpp  defaults
src/server/scripts/Custom/: custom_script_loader.cpp  defaults  functional_ai_tests.cpp
src/server/scripts/EasternKingdoms/: CMakeLists.txt  eastern_kingdoms_script_loader.cpp
src/server/scripts/Examples/: example_commandscript.cpp
src/server/scripts/Kalimdor/: kalimdor_script_loader.cpp
src/server/scripts/Northrend/AzjolNerub/AzjolNerub/: boss_krikthir_the_gatewatcher.cpp
src/server/scripts/Outland/BlackTemple/: boss_shade_of_akama.cpp
src/server/scripts/Promise/: promise_script_loader.cpp
src/server/scripts/Spells/: CMakeLists.txt
src/server/scripts/World/: world_script_loader.cpp
src/server/shared/: CMakeLists.txt  Common.h  Shared.rc
src/server/worldserver/: CMakeLists.txt  Main.cpp  worldserver.conf.dist
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt
src/tools/mmaps_generator/: CMakeLists.txt
src/tools/update_checker/: CMakeLists.txt  lf_test_F6A91C958ECC2C68F4484F44A5C267B061FACAE5.txt  main.cpp
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt
(+195 files in other folders)
